fix(tabs): truncate container tab text

--- a/packages/components/src/components/tabs/_tabs.scss
+++ b/packages/components/src/components/tabs/_tabs.scss
@@ -277,6 +277,9 @@
       background-color: $ui-01;
 
       .#{$prefix}--tabs__nav-link {
+        line-height: calc(
+          #{rem(48px)} - (#{$spacing-03} * 2)
+        ); // height - vertical padding
         // Draws the border without affecting the inner-content
         box-shadow: inset 0 2px 0 0 $interactive-04;
         border-bottom: none;
@@ -336,9 +339,10 @@
 
   .#{$prefix}--tabs--container a.#{$prefix}--tabs__nav-link {
     @include carbon--breakpoint(md) {
-      display: flex;
-      align-items: center;
       height: rem(48px);
+      line-height: calc(
+        #{rem(48px)} - (#{$spacing-03} * 2)
+      ); // height - vertical padding
       border-bottom: none;
     }
   }
